# cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  build.sh  e2e_test.sh
include/: cli.hpp  common.hpp  mock_wallet.hpp  quip_factory.hpp  quip_wallet.hpp
src/: cli.cpp  common.cpp  main.cpp  quip_factory.cpp  quip_wallet.cpp
test/: cli_test.cpp  quip_factory_test.cpp  quip_wallet_test.cpp
